--- a/libs/sistema/theme/tokens/_buttons.tokens.scss
+++ b/libs/sistema/theme/tokens/_buttons.tokens.scss
@@ -1,11 +1,24 @@
-@import "palette.tokens";
-@import "../../pastanaga-angular/projects/pastanaga-angular/src/styles/theme/spacing.tokens";
+@import "./palette.tokens";
+@import "../../../pastanaga-angular/projects/pastanaga-angular/src/styles/theme/spacing.tokens";
 
 //=====================================
 // BUTTONS
 //=====================================
 // Borders
 $border-radius-button: rhythm(.5);
+
+// Sizes
+$padding-button-medium: rhythm(.5) rhythm(2);
+$padding-button-large: rhythm(1) rhythm(2);
+
+$padding-button-icon-text-medium: rhythm(.5) rhythm(2) rhythm(.5) rhythm(1.5);
+$padding-button-icon-text-large: rhythm(1) rhythm(2) rhythm(1) rhythm(1.5);
+
+$padding-button-icon-small: rhythm(1);
+$padding-button-icon-large: rhythm(1.5);
+
+// Shadows
+$shadow-button-basic-hover: none;
 
 //---------------------------------------------------------------
 // PRIMARY
@@ -27,10 +40,12 @@ $color-text-button-secondary-solid-active: $color-light-stronger;
 
 $color-background-button-secondary-solid: $color-dark-stronger;
 $color-background-button-secondary-solid-hover: $color-dark-stronger;
-$color-background-button-secondary-solid-active: $color-neutral-light;
+$color-background-button-secondary-solid-active: $color-neutral-regular;
 
 // basic
-$color-background-button-secondary-basic-hover: $color-neutral-lightest;
+$color-background-button-secondary-basic: $color-light-stronger;
+$color-background-button-secondary-basic-hover: $color-neutral-light;
+$color-background-button-secondary-basic-active: $color-neutral-regular;
 
 //---------------------------------------------------------------
 // DESTRUCTIVE
@@ -56,7 +71,7 @@ $color-background-button-destructive-basic-active: $color-secondary-lighter;
 // INVERTED
 //---------------------------------------------------------------
 $color-text-button-inverted-solid: $color-neutral-strong;
-$color-text-button-inverted-solid-hover: $color-neutral-regular;
+$color-text-button-inverted-solid-hover: $color-dark-stronger;
 $color-text-button-inverted-solid-active: $color-light-stronger;
 
 $color-background-button-inverted-solid: $color-neutral-lightest;
