--- a/apps/app/src/app/components/stash-navbar/stash-navbar.component.scss
+++ b/apps/app/src/app/components/stash-navbar/stash-navbar.component.scss
@@ -43,10 +43,10 @@ $height-breakpoint: 730px;
     }
     > .group-items {
       > .nav-link {
+        position: relative;
         height: 44px;
-        padding: 0 0 0 16px;
+        padding: 0 0 0 21px;
         margin-right: 16px;
-        margin-left: 5px;
         color: inherit;
         text-decoration: none;
         display: flex;
@@ -57,6 +57,15 @@ $height-breakpoint: 730px;
         svg {
           display: block;
           width: 25px;
+        }
+        &.active::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          width: 3px;
+          background-color: var(--stf-primary);
         }
         > .nav-link-title {
           flex: 1 1 auto;
@@ -99,7 +108,7 @@ $height-breakpoint: 730px;
       padding-top: 0;
 
       .nav-link {
-        margin: 0 5px;
+        margin-right: 5px;
       }
       .nav-link-title {
         display: none;
