--- a/libs/sistema/theme/tokens/_typography.tokens.scss
+++ b/libs/sistema/theme/tokens/_typography.tokens.scss
@@ -3,11 +3,123 @@
 // =================================================
 // TYPOGRAPHY
 // =================================================
+// Family
 $font-family-sans-serif:      'Source Sans Pro', Futura, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 $font-family-monospace:       'Source Code Pro', SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
-$font-family-body:            $font-family-sans-serif !default;
+$font-family-body:            $font-family-sans-serif;
+
+// Weight
+$font-weight-regular: 400;
+$font-weight-semi-bold: 500;
+$font-weight-bold: 700;
+
+$font-weight-body-xs: $font-weight-regular;
+$font-weight-body-s: $font-weight-regular;
+$font-weight-body-m: $font-weight-regular;
+$font-weight-title-xxs: $font-weight-semi-bold;
+$font-weight-title-xs: $font-weight-bold;
+$font-weight-title-s: $font-weight-bold;
+$font-weight-title-m: $font-weight-regular;
+$font-weight-title-l: $font-weight-bold;
+$font-weight-display-s: $font-weight-bold;
+
+// Sizes
+$font-size-base: 1rem;
+$font-size: (
+  xxs: ($font-size-base * .625),  // 10px - 0.625 rem
+  xs: ($font-size-base * .75),    // 12px - 0.75 rem
+  s:  ($font-size-base * .9375),  // 15px - 0.9375 rem
+  m:  $font-size-base,            // 16px - 1 rem
+  l:  ($font-size-base * 1.125),  // 18px - 1.125 rem
+  xl:  ($font-size-base * 1.25),  // 20px - 1.25 rem
+  xxl:  ($font-size-base * 1.5),  // 24px - 1.5 rem
+  // display
+  d1:     ($font-size-base * 1.375),  // 22px - 1.375 rem
+  d1-md:  ($font-size-base * 1.625),  // 26px - 1.625 rem
+  d2:     ($font-size-base * 1.75),   // 28px - 1.75 rem
+  d2-md:  ($font-size-base * 2),      // 32px - 2 rem
+  d3:     ($font-size-base * 2.25),   // 36px - 2.25 rem
+  d3-md:  ($font-size-base * 3),      // 48px - 3 rem
+);
+@function font-size($t-shirt-size) {
+  @return map-get($font-size, $t-shirt-size)
+}
+
+$font-size-overline: font-size(xxs);
+$font-size-body-xs: font-size(xxs);
+$font-size-body-s: font-size(xs);
+$font-size-title-xs: font-size(s);
+$font-size-title-s: font-size(m);
+$font-size-title-m: font-size(l);
+$font-size-title-l: font-size(l);
+$font-size-display-s: font-size(d1);
+$font-size-display-m: font-size(d2);
+
+$font-size-title-s-md: font-size(l);
+$font-size-title-m-md: font-size(xl);
+$font-size-title-l-md: font-size(xl);
+$font-size-display-s-md: font-size(d1-md);
+$font-size-display-m-md: font-size(d2-md);
+
+// Line height
+$line-height: (
+  s:  ($font-size-base * .875),    // 14px -  .875 rem
+  m:  ($font-size-base * 1.125),   // 18px - 1.125 rem
+  l:  ($font-size-base * 1.1875),  // 19px - 1.1875 rem
+  xl: ($font-size-base * 1.3125),  // 21px - 1.3125 rem
+  xxl: ($font-size-base * 1.375),  // 22px - 1.375 rem
+  // display
+  d1:     ($font-size-base * 1.625),  // 26px - 1.625 rem
+  d1-md:  ($font-size-base * 1.75),   // 28px - 1.75 rem
+  d2:     ($font-size-base * 1.875),  // 30px - 1.875 rem
+  d2-md:  ($font-size-base * 2.125),  // 34px - 2.125 rem
+  d3:     ($font-size-base * 2.25),   // 36px - 2.25 rem
+  d3-md:  ($font-size-base * 2.75),   // 44px - 2.75 rem
+);
+@function line-height($t-shirt-size) {
+  @return map-get($line-height, $t-shirt-size)
+}
+
+$line-height-body: 1.4;
+
+$line-height-overline: line-height(s);
+$line-height-body-xs: line-height(s);
+$line-height-body-s: line-height(m);
+$line-height-body-m: line-height(xl);
+$line-height-title-xxs: line-height(l);
+$line-height-title-xs: line-height(xl);
+$line-height-title-s: line-height(xxl);
+$line-height-title-m: line-height(d1);
+$line-height-title-l: line-height(d1);
+$line-height-display-s: line-height(d2);
+$line-height-display-m: line-height(d3);
+
+$line-height-title-s-md: line-height(d1);
+$line-height-title-m-md: line-height(d1-md);
+$line-height-title-l-md: line-height(d1-md);
+$line-height-display-s-md: line-height(d2-md);
+$line-height-display-m-md: line-height(d3-md);
+
+// Letter spacing
+$letter-spacing-overline: 0.01rem;
+$letter-spacing-body-xs: 0.01rem;
+$letter-spacing-body-s: 0.01rem;
+$letter-spacing-body-m: 0.01rem;
+$letter-spacing-title-xxs: 0.01rem;
+$letter-spacing-title-xs: 0.01rem;
+$letter-spacing-title-s: 0.01rem;
+$letter-spacing-title-m: 0.01rem;
+$letter-spacing-title-l: 0;
+$letter-spacing-display-s: 0;
+$letter-spacing-display-m: 0;
+
+$letter-spacing-title-s-md: 0.01rem;
+$letter-spacing-title-m-md: 0.01rem;
+$letter-spacing-title-l-md: 0;
+$letter-spacing-display-s-md: 0;
+$letter-spacing-display-m-md: 0;
 
 // =================================================
-// TYPOGRAPHY
+// SHADOWS
 // =================================================
 $shadow-small: 1px 1px 2px rgba($color-dark-stronger, 0.3);
