--- a/apps/app/src/app/ontologies/ontology/ontology.component.html
+++ b/apps/app/src/app/ontologies/ontology/ontology.component.html
@@ -118,7 +118,8 @@
     </div>
   </div>
 
-  <div fxLayout="row" class="mb-68">
+  <div fxLayout="row"
+       class="mb-68">
     <div fxFlex="200px"></div>
     <div fxFlex="1 1 0"
          fxLayout="row"
@@ -153,7 +154,7 @@
          fxFlex="1 1 0">
       {{ 'ontology.delete_warning' | translate }}
     </div>
-    <div fxFlex="0 0 auto">  
+    <div fxFlex="0 0 auto">
       <stf-button (click)="deleteOntology()"
                   minWidth="110px"
                   color="destructive">
