--- a/apps/app/src/_variables.scss
+++ b/apps/app/src/_variables.scss
@@ -1,1 +1,3 @@
 @import '../../../libs/pastanaga/src/lib/styles/stf.scss';
+
+@import '../../../libs/pastanaga-angular/projects/pastanaga-angular/src/styles/variables';
