--- a/apps/app/src/styles.scss
+++ b/apps/app/src/styles.scss
@@ -1,60 +1,14 @@
-@import 'libs/pastanaga/src/lib/styles/once';
-@import 'libs/pastanaga/src/lib/styles/fonts';
+@import 'libs/sistema/theme/fonts';
+@import 'libs/pastanaga-angular/projects/pastanaga-angular/src/styles/core';
 @import 'app/styles/css-variables';
+// To be removed once dashboard app will be entirely migrated to pastanaga-angular
+@import 'libs/pastanaga/src/lib/styles/once-light';
 
-html,
-body {
-  height: 100%;
-}
-
-body {
-  min-width: var(--app-min-width);
-  overflow-x: auto;
-  background-color: var(--app-background-color);
-}
+@import 'libs/sistema/styles/apps-common';
 
 .user-background {
   background-image: url('./assets/images/background.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
-
-#pa-toasts-block .stf-toast {
-  &.toast-info {
-    background-color: var(--stf-gray-lighter) !important;
-  }
-  &.toast-error {
-    background-color: var(--stf-red-pale) !important;
-    strong {
-      color: var(--stf-red);
-    }
-    .close-button svg {
-      fill: var(--stf-red);
-    }
-  }
-  &.toast-warning {
-    background-color: var(--stf-orange-pale) !important;
-    strong {
-      color: var(--stf-orange);
-    }
-    .close-button svg {
-      fill: var(--stf-orange);
-    }
-  }
-  &.toast-success {
-    background-color: var(--stf-green-pale) !important;
-    strong {
-      color: var(--stf-green);
-    }
-    .close-button svg {
-      fill: var(--stf-green);
-    }
-  }
-}
-
-code.endpoint {
-  overflow-x: auto;
-  white-space: pre-wrap;
-  word-break: break-all;
 }
