Fix active indicators

--- a/apps/app/src/app/components/stash-navbar/stash-navbar.component.scss
+++ b/apps/app/src/app/components/stash-navbar/stash-navbar.component.scss
@@ -58,6 +58,7 @@ $height-breakpoint: 730px;
           display: block;
           width: 25px;
         }
+        &:hover::before,
         &.active::before {
           content: "";
           position: absolute;
