Update desktop prefix to be nde
Follow the prefix convention: n for nuclia followed by the first two letters of the app name

--- a/apps/desktop/src/app/app.component.html
+++ b/apps/desktop/src/app/app.component.html
@@ -1,3 +1,3 @@
 <router-outlet></router-outlet>
-<da-login *ngIf="!isAuthenticated"></da-login>
+<nde-login *ngIf="!isAuthenticated"></nde-login>
 <div class="version">Version: {{version}}</div>
