--- a/apps/desktop/src/app/main-layout/main-layout.component.html
+++ b/apps/desktop/src/app/main-layout/main-layout.component.html
@@ -1,4 +1,4 @@
-<da-topbar></da-topbar>
+<nde-topbar></nde-topbar>
 <div class="page-wrapper">
   <div class="page-content"
        *ngIf="isLogged">
