Pastanaga 2 + sistema integration

--- a/apps/desktop/src/app/connectors/connector/connector.component.html
+++ b/apps/desktop/src/app/connectors/connector/connector.component.html
@@ -4,6 +4,7 @@
          [alt]="title + ' logo'">
   </div>
   <div>
-    <div class="title">{{ title }}</div>
+    <div class="title-s">{{ title }}</div>
     <div>{{ description }}</div>
   </div>
+</div>
