--- a/apps/desktop/src/styles.scss
+++ b/apps/desktop/src/styles.scss
@@ -1,7 +1,16 @@
-@import 'libs/pastanaga/src/lib/styles/once';
-@import 'libs/pastanaga/src/lib/styles/fonts';
+//@import 'libs/pastanaga/src/lib/styles/once';
+//@import 'libs/pastanaga/src/lib/styles/fonts';
+//@import 'apps/app/src/app/styles/css-variables';
+//@import 'libs/sistema/styles/apps-common';
+
+@import 'libs/sistema/theme/fonts';
+@import 'libs/pastanaga-angular/projects/pastanaga-angular/src/styles/core';
 @import 'apps/app/src/app/styles/css-variables';
+// To be removed once dashboard app will be entirely migrated to pastanaga-angular
+@import 'libs/pastanaga/src/lib/styles/once-light';
+
 @import 'libs/sistema/styles/apps-common';
+
 
 :root {
   --desktop-background: var(--stf-gray-background);
