--- a/apps/desktop/src/app/upload/steps/steps.component.scss
+++ b/apps/desktop/src/app/upload/steps/steps.component.scss
@@ -19,7 +19,7 @@
 .bullet {
   display: flex;
   align-items: center;
-  margin-bottom: rythm(0.5);
+  margin-bottom: rhythm(0.5);
   &::before {
     content: "";
     width: 11px;
