--- a/apps/desktop/src/app/account/account.component.scss
+++ b/apps/desktop/src/app/account/account.component.scss
@@ -7,20 +7,20 @@
   margin: 0 auto;
   padding: 62px 100px;
   border-radius: 8px;
-  background-color: $white;
+  background-color: $color-light-stronger;
   display: flex;
   flex-direction: column;
 }
 
 ul {
-  margin-top: rythm(4);
+  margin-top: rhythm(6);
   padding: 0;
 }
 li {
   display: block;
-  margin: rythm(0.5) 0;
+  margin: rhythm(0.5) 0;
   text-align: center;
-  padding: rythm(1) 0;
+  padding: rhythm(1.5) 0;
   background-color: var(--stf-gray-background);
   cursor: pointer;
 }
