--- a/apps/app/src/app/knowledge-box/knowledge-box-users/knowledge-box-users.component.scss
+++ b/apps/app/src/app/knowledge-box/knowledge-box-users/knowledge-box-users.component.scss
@@ -32,6 +32,7 @@
     width: 775px;
     padding: 24px 38px 40px 38px;
     border-spacing: 0;
+    border-collapse: separate;
     background-color: #fff;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
 
