--- a/apps/manager/src/app/account/account-detail/account-detail.component.html
+++ b/apps/manager/src/app/account/account-detail/account-detail.component.html
@@ -185,7 +185,7 @@
                     </ng-container>
                   </mat-panel-description>
                 </mat-expansion-panel-header>
-                <stf-button (click)="goToStash(stash.slug)">
+                <stf-button (click)="goToStash(stash.id)">
                   Edit
                 </stf-button>
               </mat-expansion-panel>
