--- a/apps/desktop/src/app/login/login.component.html
+++ b/apps/desktop/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="splash">
   <div class="container">
-    <img src="assets/nuclia-desktop.svg">
+    <img src="assets/nuclia-desktop.svg" alt="Nuclia desktop">
     <p>{{'login.headline' | translate}}</p>
     <p><strong>{{'login.not-connected' | translate}}</strong></p>
-    <stf-button (click)="login()">{{'login.button' | translate}}</stf-button>
+    <pa-button kind="primary" (click)="login()">{{'login.button' | translate}}</pa-button>
   </div>
 </div>
