--- a/apps/desktop/src/app/upload/confirm-files/confirm-files.component.html
+++ b/apps/desktop/src/app/upload/confirm-files/confirm-files.component.html
@@ -9,11 +9,10 @@
     </div>
   </div>
   <div class="actions">
-    <stf-button (click)="upload()"
-                minWidth="110px"
-                qa="confirm">{{ 'generic.upload' | translate }}</stf-button>
-    <stf-button (click)="close()"
-                minWidth="110px"
-                color="gray">{{ 'generic.cancel' | translate }}</stf-button>
+    <pa-button qa="confirm"
+               kind="primary"
+               (click)="upload()">{{ 'generic.upload' | translate }}</pa-button>
+
+    <pa-button aspect="basic" (click)="close()">{{ 'generic.cancel' | translate }}</pa-button>
   </div>
 </div>
